# dear

./: Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
src/backend/: mod.rs  query.rs  sql.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: create_note.rs  list_notes.rs  mod.rs
src/entity/: mod.rs  note.rs  task.rs
src/repository/: file.rs  in_memory.rs  mod.rs
