[package]
name = "dear"
version = "0.1.0"
edition = "2021"
description = "<Placeholder>"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["sql"]
sql = []
