[package]
name = "dear"
version = "0.1.1"
edition = "2021"
description = "<Placeholder>"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive", "env"] }
owo-colors = "3.4.0"
textwrap = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# chrono = { version = "0.4", features = ["serde"] }
# serde = "1.0"
# serde_json = "1.0"
# sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "any"] }
# tokio = { version = "1", features = ["full"] }
# async-trait = "0.1.52"
# enum_dispatch = "0.3.8"

# [features]
# default = ["sql"]
# sql = []
